--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav class="nav-header">
             <div class="logo-header">
-                <img src="./images/logo-header.png" alt="logo aztrek">
+                <a href="./index.html"><img src="./images/logo-header.png" alt="logo aztrek"></a>
             </div>
             <button class="menu-open"></button>
             <div class="main-menu">
@@ -26,7 +26,7 @@
                 <div id="menu-destination" class="destination">
                     <a href="#" onclick="openPays()">Destination</a>
                     <div id="menu-pays" class="menu-list">
-                        <p>Tous nos voyages</p>
+                        <a href="./pays.html">Tous nos pays</a>
                         <ul class="menu-pays-liste">
                             <li>
                                 <a href="#" id="costaricatitle" onclick="openSejours(costaricatitle, costarica)">Costa
