--- a/pays.html
+++ b/pays.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,15 +8,17 @@
     <link rel="icon" href="./images/favicon.ico" />
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Trésors du Yucatán - Aztrek</title>
+    <title>Nos pays</title>
 </head>
 
-<body class="body">
+<body>
+
+
     <header>
 
         <nav class="nav-header">
             <div class="logo-header">
-                    <a href="./index.html"><img src="./images/logo-header.png" alt="logo aztrek"></a>
+                <a href="./index.html"><img src="./images/logo-header.png" alt="logo aztrek"></a>
             </div>
             <button class="menu-open"></button>
             <div class="main-menu">
@@ -24,7 +26,7 @@
                 <div id="menu-destination" class="destination">
                     <a href="#" onclick="openPays()">Destination</a>
                     <div id="menu-pays" class="menu-list">
-                            <a href="./pays.html">Tous nos pays</a>
+                        <a href="">Tous nos pays</a>
                         <ul class="menu-pays-liste">
                             <li>
                                 <a href="#" id="costaricatitle" onclick="openSejours(costaricatitle, costarica)">Costa
@@ -79,7 +81,7 @@
             </div>
         </nav>
         <div class="header-title container">
-            <h1>Séjour</h1>
+            <h1>Nos pays</h1>
         </div>
         <ul class="reseau-sociaux">
             <li><a href="#"><img src="./images/facebook-header.png" alt=""></a></li>
@@ -89,75 +91,20 @@
         </ul>
     </header>
 
-    <main>
-        <section id="presentation" class="contenair">
-            <article class="presentation">
-                <h2>Trésors du Yucatán</h2>
-                <p>Le Mexique, et en particulier le Yucatán, est une terre de rêve.</p>
-                <p>Elle y mêle quelques-uns des plus beaux sites mayas, riche patrimoine culturel, et des trésors
-                    naturels, comme la mer des Caraïbes ou les cenotes, ces puits souterrains ou à ciel ouvert, trous
-                    d’eau qui parsèment le plateau calcaire du Yucatán.</p>
-                <p>L’âme indienne y est bien vivante, celle de la civilisation raffinée des Mayas à leur grande époque
-                    bien sûr, mais également celle des Mayas d’aujourd’hui, qui ont gardé leurs us et coutumes.</p>
-                <ul>
-                    <li>6 jours</li>
-                    <li>à partir de 3290 €</li>
-                    <li>Niveau 1/5</li>
-                </ul>
-            </article>
+    <main id="pays">
 
-            <aside>
-                <img src="./images.1/s1-j3-d.jpg" alt="">
-            </aside>
+        <section class="pays-img contenair">
 
-        </section>
-
-        <section class="depart">
-                <h2>Nos Départs</h2>
-                <table>
-                    <tr>
-                        <th>Du</th>
-                        <th>Au</th>
-                        <th>Prix</th>
-                        <th>Départ Assuré<br> à partir de </th>
-                        <th>Description de l'exemple</th>
-                    </tr>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>15/02/2019</td>
-                        <td>3090€</td>
-                        <td>Assuré</td>
-                        <td><a href="#">S'INSCRIRE</a></td>
-                    </tr>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>15/02/2019</td>
-                        <td>3090€</td>
-                        <td>Assuré</td>
-                        <td><a href="#">S'INSCRIRE</a></td>
-                    </tr>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>15/02/2019</td>
-                        <td>3090€</td>
-                        <td>Assuré</td>
-                        <td><a href="#">S'INSCRIRE</a></td>
-                    </tr>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>15/02/2019</td>
-                        <td>3090€</td>
-                        <td>Assuré</td>
-                        <td><a href="#">S'INSCRIRE</a></td>
-                    </tr>
-                    <tr>
-                        <td>01/02/2019</td>
-                        <td>15/02/2019</td>
-                        <td>3090€</td>
-                        <td>Assuré</td>
-                        <td><a href="#">S'INSCRIRE</a></td>
-                    </tr>
-                </table>
+            <h2>Costa Rica</h2>
+            <a href="./sejour-1.html"><img src="./images/costa-rica-slider.jpg" alt=""></a>
+            <h2>Guatemala</h2>
+            <a href="./sejour-1.html"><img src="./images/Guatemala-slider.jpg" alt=""></a>
+            <h2>Honduras</h2>
+            <a href="./sejour-1.html"><img src="./images/honduras-slider.jpg" alt=""></a>
+            <h2>Mexique</h2>
+            <a href="./sejour-1.html"><img src="./images/mexique-slider.jpg" alt=""></a>
+            <h2>Salvador</h2>
+            <a href="./sejour-1.html"><img src="./images/salvador-slider.jpg" alt=""></a> </section>
 
     </main>
 
